# object_mapper

./: pyproject.toml
src/: deep_iterator.py  object_mapper.py
