[tool.poetry]
name = "object_test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
